	for all install types.
2018-11-02 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.0rd3alpha02.
2018-11-05 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in the 'install_rivendell.sh' script that failed
	to create the source directories for 'rd_xfer/', etc when invoked
	in '--server' and '--standalone' mode.
2018-11-05 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.0rd3alpha03.
2018-11-06 Fred Gleason <fredg@paravelsystems.com>
	* Added the 'rd' user to the 'wheel' group.
2018-11-06 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.0rd3alpha04.
2018-11-26 Fred Gleason <fredg@paravelsystems.com>
	* Added the 'taglib-devel' package to 'install_rivendell_devel.sh'.
2018-11-26 Fred Gleason <fredg@paravelsystems.com>
	* Added blacklist entry for the 'snd-asihpi' module on CentOS 7
	installs.
2018-11-26 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.0rd3alpha05.
2019-03-08 Fred Gleason <fredg@paravelsystems.com>
	* Changed the ALPHA warning to a BETA warning in 'README'.
	* Replaced the patch to set SeLinux Permissive mode on CentOS 7
	with a complete config file.
2019-03-08 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.0rd3beta0.
2019-03-21 Fred Gleason <fredg@paravelsystems.com>
	* Removed the BETA warning.
2019-07-01 Fred Gleason <fredg@paravelsystems.com>
	* Added 'centos7/rsyslog.conf.patch'.
2019-07-01 Fred Gleason <fredg@paravelsystems.com>
	* Removed support for RHEL6.
2019-07-01 Fred Gleason <fredg@paravelsystems.com>
	* Set the default report editor to gedit(1).
2019-07-01 Fred Gleason <fredg@paravelsystems.com>
	* Removed 'centos7/qt_plugins_3.3rc'.
	* Removed 'centos7/qtrc'.
2019-07-01 Fred Gleason <fredg@paravelsystems.com>
	* Removed 'common/rog-1.3.3.pdf'.
2019-07-01 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.9.0rd3beta01.