@@ -251,3 +251,7 @@
 	* Removed 'common/rog-1.3.3.pdf'.
 2019-07-01 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the package version to 0.9.0rd3beta01.
+2020-03-13 Fred Gleason <fredg@paravelsystems.com>
+	* Added 'libmusicbrainz5-devel', 'libdiscid-devel', 'libcoverart'
+	and 'libcoverart-devel' packages to the 'install_rivendell_devel.sh'
+	script.
